# init-rs

./: .justfile  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
src/: lib.rs  main.rs
